--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,7 +61,7 @@ logger.play = INFO
 logger.application = DEBUG
 
 mongo.url = "192.168.99.100"
-mongo.port = "49155"
-mongo.user = "admin"
-mongo.pwd = "GgXefdhjON8O"
+mongo.port = "49153"
+#mongo.user = "admin"
+#mongo.pwd = "GgXefdhjON8O"
 mongo.db = "Kontestator"
